# ols-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
src/ols_mcp/: __init__.py  _version.py  api.py  main.py  tools.py
tests/: test_api.py  test_integration.py  test_tools.py
